--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "framer-motion": "^11.3.19",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
